--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<body>
+<body style="background: #D7DEF4;">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container" id="head_space">
@@ -35,8 +35,8 @@
             </div>
         </div>
     </nav>
-    <div class="card">
-        <article class="card-body" style="width: 50%; margin: 0 auto;">
+    <div class="card" style="background: #D7DEF4; border-style: none;">
+        <article class="card-body" style="width: 50%; margin: 0 auto; ">
             <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
             <hr>
             <p class="text-success text-center">Welcome to Surv-YAY!</p>
@@ -54,7 +54,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="" class="form-control" placeholder="Email or login" type="email" id="user">
+                        <input name="" class="form-control" placeholder="Username" type="email" id="user">
                     </div> <!-- input-group.// -->
                 </div> <!-- form-group// -->
 
@@ -148,5 +148,5 @@
         }
 
     </script>
-</body>
+</bodystyle="background:>
 </html>
