--- a/views/index.html
+++ b/views/index.html
@@ -9,70 +9,72 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-    <body>
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-            <div class="container" id="head_space">
-                <a class="navbar-brand" href="#">
-                    <img src="images/SurvyaySmall Logo.jpg" alt="SurvYay" class="img-responsive">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">
-                                Log In
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <!--<li class="nav-item">
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container" id="head_space">
+            <a class="navbar-brand" href="#">
+                <img src="images/SurvyaySmall Logo.jpg" alt="SurvYay" class="img-responsive">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">
+                            Log In
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>-->
 
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <!--SIDE NAV-->
-        <div class="sidenav">
-            <button class="dropdown-btn" id="fill">Fill ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('fill_survey')">Surveys</a>
-            </div>
-
-            <button class="dropdown-btn" id="view">View ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('view_records')">Records</a>
-                <a href="#" onclick="load_tab('view_surveys')">Surveys</a>
-            </div>
-
-            <button class="dropdown-btn" id="create">Create ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('create_question')">Questions</a>
-                <a href="#" onclick="load_tab('create_survey')">Surveys</a>
-            </div>
-
-            <button class="dropdown-btn" id="set">Settings ></button>
-            <div class="dropdown-container">
-                <a href="#" onclick="load_tab('admin_space')">Admin</a>
-                <a href="#" onclick="load_tab('admin_space')">User</a>
+                </ul>
             </div>
         </div>
+    </nav>
 
-        <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
-        <!--<div  id="content" style="height:auto; width:auto ">-->
-        <div id="index">
-            <h5>Welcome, make a site selection to begin!</h5>
-
+    <!--SIDE NAV-->
+    <div class="sidenav">
+        <button class="dropdown-btn" id="fill">Fill ></button>
+        <div class="dropdown-container">
+            <a href="#" onclick="load_tab('fill_survey')">Surveys</a>
         </div>
 
-    </body>
+        <button class="dropdown-btn" id="view">View ></button>
+        <div class="dropdown-container">
+            <a href="#" onclick="load_tab('view_records')">Records</a>
+            <a href="#" onclick="load_tab('view_surveys')">Surveys</a>
+        </div>
+
+        <button class="dropdown-btn" id="create">Create ></button>
+        <div class="dropdown-container">
+            <a href="#" onclick="load_tab('create_question')">Questions</a>
+            <a href="#" onclick="load_tab('create_survey')">Surveys</a>
+        </div>
+
+        <button class="dropdown-btn" id="set">Settings ></button>
+        <div class="dropdown-container">
+            <a href="#" onclick="load_tab('admin_space')">Admin</a>
+            <a href="#" onclick="load_tab('admin_space')">User</a>
+        </div>
+    </div>
+
+    <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
+    <!--<div  id="content" style="height:auto; width:auto ">-->
+    <div id="index">
+        <h5>Welcome, make a site selection to begin!</h5>
+
+    </div>
+
+</body>
 </html>
 
 <script>
+    var gathered_role = sessionStorage.getItem("favoriteMovie");
+    console.log(gathered_role);
     /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
     var dropdown = document.getElementsByClassName("dropdown-btn");
     var i;
