--- a/public/css/gunks.css
+++ b/public/css/gunks.css
@@ -129,17 +129,16 @@ button { /*had to make another one since I kept breaking it*/
 
 
 /*Middle wrapper*/
-#index {
-  position: absolute;
-  z-index: 1;
-  background-color: #DFE4E8;
-  left: 140px;
-  width: 1501px;
-  height: 800px;
-  top: 210px;
-  font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  float: right;
+/*#index {
+    background-color: #DFE4E8;
+
+    display: inline;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}*/
+
+#display {
+    background-color: #DFE4E8;
 }
 
 #create_question, #create_survey, #fill_select, #fill_survey, #view_records, #view_select, #view_surveys {
@@ -197,4 +196,31 @@ footer {
   padding: 10px;
   text-align: center;
   color: white;
+}
+
+.list-group {
+    margin: auto;
+    float: left;
+    padding-top: 0px;
+    background-color: antiquewhite;
+}
+
+.lead {
+    margin: auto;
+    left: 0;
+    right: 0;
+    padding-top: 10%;
+    background-color: #DFE4E8;
+    color: black
+}
+
+.list-group-item {
+    background-color: #9DCE5B;
+    color: black;
+    width: 150px;
+    height: 45px;
+}
+
+.click {
+    background-color: rgb(172, 199, 136);
 }
