--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #DFE4E8;">
 <head>
     <link rel="stylesheet" href="css/gunks.css">
     <title>Surv-YAY Homepage</title>
@@ -35,9 +35,32 @@
             </div>
         </div>
     </nav>
+    <div class="list-group">
 
-    <!--SIDE NAV-->
-    <div class="sidenav">
+        <a href="#" class="list-group-item active"><span>Home</span></a>
+        <a href="#" onclick="load_tab('fill_survey')" class="list-group-item"><span>Fill</span></a>
+        <a href="#" class="list-group-item"><span>View ></span></a>
+        <a href="#" onclick="load_tab('view_records')" class="list-group-item click"><span>&ensp;&ensp;Records</span></a>
+        <a href="#" onclick="load_tab('view_surveys')" class="list-group-item click"><span>&ensp;&ensp;Surveys</span></a>
+        <a href="#" class="list-group-item"><span>Create ></span></a>
+        <a href="#" onclick="load_tab('create_survey')" class="list-group-item click"><span>&ensp;&ensp;Surveys</span></a>
+        <a href="#" onclick="load_tab('create_question')" class="list-group-item click"><span>&ensp;&ensp;Questions</span></a>
+        <a href="#" onclick="load_tab('admin_space')" class="list-group-item"><span>Settings</span></a>
+    </div>
+    <main class="page-content">
+        <div class="container-fluid" id="display">
+            <div class="row">
+                <div class="form-group col-md-12" style="background-color: #D7DEF4;">
+                    <h1>Home</h1>
+                    <p>Welcome! Make a site selection to begin!</p>
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!--SIDE NAV--
+    <div class="sidenav" style="display:inline-block">
         <button class="dropdown-btn" id="fill">Fill ></button>
         <div class="dropdown-container">
             <a href="#" onclick="load_tab('fill_survey')">Surveys</a>
@@ -60,14 +83,13 @@
             <a href="#" onclick="load_tab('admin_space')">Admin</a>
             <a href="#" onclick="load_tab('admin_space')">User</a>
         </div>
-    </div>
-
+    </div> -->
     <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
     <!--<div  id="content" style="height:auto; width:auto ">-->
-    <div id="index">
+    <!--<div id="index">
         <h5>Welcome, make a site selection to begin!</h5>
 
-    </div>
+    </div>-->
 
 </body>
 </html>
@@ -75,8 +97,17 @@
 <script>
     var gathered_role = sessionStorage.getItem("favoriteMovie");
     console.log(gathered_role);
+
+    $(document).ready(function () {
+        $('.list-group-item').click(function (e) {
+            e.preventDefault();
+            $('.list-group-item').removeClass('active');
+            $(this).addClass('active');
+        });
+    });
+
     /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-    var dropdown = document.getElementsByClassName("dropdown-btn");
+    /*var dropdown = document.getElementsByClassName("dropdown-btn");
     var i;
 
     for (i = 0; i < dropdown.length; i++) {
@@ -89,13 +120,41 @@
                 dropdownContent.style.display = "block";
             }
         });
-    }
+    } */
 
     function load_tab(tab) {
         var dest = 'views/' + tab
         console.log(dest);
         /*document.getElementById("index").innerHTML = '<iframe type="text/html" src=' + tab + ' frameborder=0 sandbox id=create_question></iframe>';*/
-        document.getElementById("index").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
+        document.getElementById("display").innerHTML = '<object type="text/html" data=' + tab + ' width=100% height=100%></object>';
         /*document.getElementsByClassName("content").innerHTML = '<object type="text/html" data=' + tab + ' ></object>';*/
     }
 </script>
+
+<style>
+     .list-group {
+     display:inline;
+     margin:auto;
+     float:left;
+     padding-top:0px;
+     background-color: antiquewhite;
+    }
+    .lead {
+     
+     margin:auto;
+     left:0;
+     right:0;
+     padding-top:10%;
+     background-color: #DFE4E8;
+     color: black
+    }
+    .list-group-item {
+        background-color: #9DCE5B;
+        color: black;
+        width: 150px;
+        height: 45px;
+    }
+    .click{
+        background-color: rgb(172, 199, 136);
+    }
+</style>
